# oxygen-gtk

./: AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  README  TODO  cmake_uninstall.cmake.in  config.h.cmake  version.sh
demo/: CMakeLists.txt  main.c  oxygen_version.h  oxygenbuttondemowidget.cpp  oxygenbuttondemowidget.h  oxygendemodialog.cpp  oxygendemodialog.h  oxygendemowidget.cpp  oxygendemowidget.h  oxygenframedemowidget.cpp  oxygenframedemowidget.h  oxygengtkdeco_main.cpp  oxygengtkdemo_main.cpp  oxygeninfowidget.cpp  oxygeninfowidget.h  oxygeninputdemowidget.cpp  oxygeninputdemowidget.h  oxygenlistdemowidget.cpp  oxygenlistdemowidget.h  oxygensignal.cpp  oxygensignal.h  oxygensignalhandler.cpp  oxygensignalhandler.h  oxygensliderdemowidget.cpp  oxygensliderdemowidget.h  oxygentabdemowidget.cpp  oxygentabdemowidget.h  oxygentimer.cpp  oxygentimer.h  oxygenversion.cpp  oxygenversion.h
rc/: CMakeLists.txt  argb-apps.conf  argb-blacklist.conf  gtk-csd.css  gtk-spinner.css  gtk.css  gtkrc  icons4  kdeglobals  oxygenrc  settings.ini
special-icons/: CMakeLists.txt
src/: CMakeLists.txt  oxygen.h  oxygen_hack_menu.cpp  oxygen_hack_menu.h  oxygenanimationdata.h  oxygenanimationmodes.h  oxygenapplicationname.cpp  oxygenapplicationname.h  oxygenargbhelper.cpp  oxygenargbhelper.h  oxygencache.h  oxygencachekey.h  oxygencairocontext.cpp  oxygencairocontext.h  oxygencairopattern.cpp  oxygencairopattern.h  oxygencairoregion.h  oxygencairosurface.h  oxygencairosurfacecache.h  oxygencairoutils.cpp  oxygencairoutils.h  oxygencoloreffect.cpp  oxygencoloreffect.h  oxygencolorutils.cpp  oxygencolorutils.h  oxygencomboboxdata.h  oxygendbus.cpp  oxygendbus.h  oxygendefines.h  oxygenflags.h  oxygenfontinfo.cpp  oxygenfontinfo.h  oxygengdkpixbufcache.h  oxygengeometry.h  oxygengtkcellinfo.cpp  oxygengtkcellinfo.h  oxygengtkcss.cpp  oxygengtkcss.h  oxygengtkdefines.h  oxygengtkdetails.h  (+72 more)
src/animations/: oxygenanimationengine.h  oxygenanimations.cpp  oxygenanimations.h  oxygenarrowstatedata.cpp  oxygenarrowstatedata.h  oxygenarrowstateengine.cpp  oxygenarrowstateengine.h  oxygenbackgroundhintengine.cpp  oxygenbackgroundhintengine.h  oxygenbaseengine.cpp  oxygenbaseengine.h  oxygencomboboxdata.cpp  oxygencomboboxdata.h  oxygencomboboxengine.h  oxygencomboboxentrydata.cpp  oxygencomboboxentrydata.h  oxygencomboboxentryengine.h  oxygencomboengine.h  oxygendatamap.h  oxygendialogengine.cpp  oxygendialogengine.h  oxygenflatbuttonengine.h  oxygenflatwidgetengine.cpp  oxygenflatwidgetengine.h  oxygenfollowmousedata.cpp  oxygenfollowmousedata.h  oxygengenericengine.h  oxygengroupboxengine.h  oxygengroupboxlabeldata.h  oxygengroupboxlabelengine.h  oxygenhook.cpp  oxygenhook.h  oxygenhoverdata.cpp  oxygenhoverdata.h  oxygenhoverengine.h  oxygeninnershadowdata.cpp  oxygeninnershadowdata.h  oxygeninnershadowengine.h  oxygenlineeditdata.cpp  oxygenlineeditdata.h  (+71 more)
src/debug/: oxygenwidgetexplorer.cpp  oxygenwidgetexplorer.h
